Adds ajax to books lights method

--- a/app/assets/javascripts/books.js.erb
+++ b/app/assets/javascripts/books.js.erb
@@ -1,5 +1,5 @@
 var pages = $('.pages').children();
-var grabs = false; // Gonna work on this, one day
+var grabs = false;
 
 pages.each(function(i) {
   var page = $(this);
