--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -37,3 +37,4 @@
     <div class="page"><!--backcover--></div>
   </div>
 </div>
+<div><img alt="Start" id="start_img" src="https://speechlogger.appspot.com/images/micoff2.png"></div>
