--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,2 @@
-Hello
+<div id="speech"></div>
+<div><img alt="Start" id="start_img" src="https://speechlogger.appspot.com/images/micoff2.png"></div>
