--- a/app/assets/javascripts/player.js.erb
+++ b/app/assets/javascripts/player.js.erb
@@ -18,6 +18,7 @@ function storyController(number) {
     switch(number) {
         case 1:
             soundPlayer("http://www.soundjay.com/nature/rain-07.mp3");
+            lights();
             break;
         case 3:
             soundPlayer("http://www.sounddogs.com/previews/2718/mp3/463871_SOUNDDOGS__ne.mp3");
@@ -33,4 +34,12 @@ function soundPlayer(soundFile) {
         loop: true,
         volume: 0.5
     }).play();
+}
+
+function lights(){
+    $.ajax({
+        method: "GET",
+        url: "/lights",
+        data: {books: {lights: 'all_on!' } }
+    })
 }
